# tvprogram

./: .gitignore  README.md  config.py  dbm.py  dbmanager.py  display.py  items.py  main.py  pyproject.toml  scrape.py
src/: config.py  dbmanager.py  display.py  main.py  scrape.py
