[tool.poetry]
name = "tv-7-dana-unazad"
version = "0.1.0"
description = "Tv program za prethodnih sedam dana."
authors = ["Bojan Sejnjanovic <bojan.sejnjanovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
psycopg2 = "^2.9.9"
streamlit = "^1.39.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
